--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>Arfa Banyu Santoro</h1>
-      <img src="../assets/duck.jpeg" alt="duck" />
+      <img src="assets/duck.jpeg" alt="duck" />
     </header>
     <div class="container">
       <div id="sidebar">
